RESOLVED FIXED33326
Fix style - Spdy -> SPDY
https://bugs.webkit.org/show_bug.cgi?id=33326
Summary Fix style - Spdy -> SPDY
Mike Belshe
Reported 2010-01-07 09:59:49 PST
Style is incorrect.
Attachments
patch. (4.40 KB, patch)
2010-01-07 10:00 PST, Mike Belshe
no flags
Mike Belshe
Comment 1 2010-01-07 10:00:46 PST
WebKit Review Bot
Comment 2 2010-01-07 10:01:49 PST
style-queue ran check-webkit-style on attachment 46060 [details] without any errors.
WebKit Commit Bot
Comment 3 2010-01-07 23:09:00 PST
Comment on attachment 46060 [details] patch. Clearing flags on attachment: 46060 Committed r52974: <http://trac.webkit.org/changeset/52974>
WebKit Commit Bot
Comment 4 2010-01-07 23:09:04 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.