2010-01-07  Mike Belshe  <mbelshe@chromium.org>

Reviewed by Darin Adler.

        Fix Spdy casing to match style guide.

        https://bugs.webkit.org/show_bug.cgi?id=33326

        * platform/network/chromium/ResourceResponse.h:
        (WebCore::ResourceResponse::ResourceResponse):
        (WebCore::ResourceResponse::wasFetchedViaSPDY):
        (WebCore::ResourceResponse::setWasFetchedViaSPDY):
2010-01-07  Mike Belshe  <mbelshe@chromium.org>

        Reviewed by Darin Adler.

        Fix Spdy casing to match style guide.

        https://bugs.webkit.org/show_bug.cgi?id=33326

        * public/WebURLResponse.h:
        * src/WebURLResponse.cpp:
        (WebKit::WebURLResponse::wasFetchedViaSPDY):
        (WebKit::WebURLResponse::setWasFetchedViaSPDY):

Canonical link: https://commits.webkit.org/44386@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52974 268f45cc-cd09-0410-ab3c-d52691b4dbfc