WebCore/platform/network/chromium/ResourceResponse.h
@@ -38,7 +38,7 @@ namespace WebCore {
         ResourceResponse()
             : m_isContentFiltered(false)
             , m_appCacheID(0)
-            , m_wasFetchedViaSpdy(false)
+            , m_wasFetchedViaSPDY(false)
         {
         }
 
@@ -46,7 +46,7 @@ namespace WebCore {
             : ResourceResponseBase(url, mimeType, expectedLength, textEncodingName, filename)
             , m_isContentFiltered(false)
             , m_appCacheID(0)
-            , m_wasFetchedViaSpdy(false)
+            , m_wasFetchedViaSPDY(false)
         {
         }
 
@@ -74,10 +74,10 @@ namespace WebCore {
             m_appCacheManifestURL = url;
         }
 
-        bool wasFetchedViaSpdy() const { return m_wasFetchedViaSpdy; }
-        void setWasFetchedViaSpdy(bool value)
+        bool wasFetchedViaSPDY() const { return m_wasFetchedViaSPDY; }
+        void setWasFetchedViaSPDY(bool value)
         {
-            m_wasFetchedViaSpdy = value;
+            m_wasFetchedViaSPDY = value;
         }
 
     private:
@@ -105,7 +105,7 @@ namespace WebCore {
         // Note: only valid for main resource responses.
         KURL m_appCacheManifestURL;
 
-        bool m_wasFetchedViaSpdy;
+        bool m_wasFetchedViaSPDY;
     };
 
 } // namespace WebCore
